fix(model) : 장 사망 시 게임 종료 기능 버그 수정
- 장 위치 체크 함수와 이동 함수 호출 위치 수정